finish crete responsive

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 								<button type="submit" id="submit" class="contact-btn">Send Message</button>
 							</div>
 						</form>	
-						<div class="row contact-bottom">
+						<div class=" contact-bottom">
 							<div class="col-sm-4 contact-info">
 								<div class="contact-img">
 									<img src="images/linea/basic_mail.png">
